tests/baselines/reference/arrayLiterals4.errors.txt
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals4.ts(2,6): error TS1212: Identifier expected. 'public' is a reserved word in strict mode
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals4.ts(2,14): error TS1212: Identifier expected. 'static' is a reserved word in strict mode
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals4.ts(3,5): error TS1212: Identifier expected. 'protected' is a reserved word in strict mode
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals4.ts(4,21): error TS1212: Identifier expected. 'protected' is a reserved word in strict mode
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals4.ts(5,7): error TS1212: Identifier expected. 'public' is a reserved word in strict mode
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals4.ts(5,15): error TS1212: Identifier expected. 'package' is a reserved word in strict mode
tests/cases/conformance/expressions/arrayLiterals/arrayLiterals4.ts(6,9): error TS1212: Identifier expected. 'implements' is a reserved word in strict mode


==== tests/cases/conformance/expressions/arrayLiterals/arrayLiterals4.ts (7 errors) ====
    "use strict"
    var [public, static] = [1, 23, ];
         ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode
                 ~~~~~~
!!! error TS1212: Identifier expected. 'static' is a reserved word in strict mode
    var protected = [1, 2, 3];
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'protected' is a reserved word in strict mode
    var [a, b, c] = [...protected];
                        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'protected' is a reserved word in strict mode
    var [[public, package]] = [[1, [2, 3]]];
          ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode
                  ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode
    var [...implements] = [[]];
            ~~~~~~~~~~
!!! error TS1212: Identifier expected. 'implements' is a reserved word in strict mode
    